[package]
name = "rafters"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raftserver"
path = "src/raftserver.rs"

[[bin]]
name = "frontend"
path = "src/frontend.rs"

[dependencies]
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
