[package]
name = "rafters"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raftserver"
path = "src/raftserver.rs"

[[bin]]
name = "frontend"
path = "src/frontend.rs"

[dependencies]
env_logger = "0.11.5"
hyper-util = "0.1.10"
log = "0.4.22"
prost = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tower = "0.5.1"

[build-dependencies]
tonic-build = "0.12.3"
